hphp/test/quick/array-set-failure.php.expectf

Fatal error: Uncaught exception 'InvalidArgumentException' with message 'Invalid vec key: expected a key of type int, string given' in %s/array-set-failure.php:7
Stack trace:
%A
